fix(vue): set overflow to hidden

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -92,5 +92,8 @@
   }
   body {
     @apply bg-background text-foreground;
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
   }
 }
